menu hamburger de base ok

--- a/index.html
+++ b/index.html
@@ -2,12 +2,75 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <title>Menu responsive</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-  
+  <header class="header">
+    <a href="#" class="header__icon"  id="header__icon" ></a>
+    <a href="#" class="header__logo">Logo</a>
+    <nav class="menu" id="menu">
+      <a href="#">Item1</a>
+      <a href="#">Item2</a>
+      <a href="#">Item3</a>
+      <a href="#">Item4</a>
+      <a href="#">Item5</a>
+      <a href="#">Item6</a>
+      <a href="#">Item7</a>
+    </nav>
+  </header>
+
+  <div class="site-content">
+    <div class="container">
+      <h1>Tralala Tralali</h1>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae reiciendis libero est, quo numquam autem pariatur quos, praesentium ipsa rem aut hic delectus voluptas! Reiciendis nobis neque ducimus nihil! Non.</p>
+      <h2>Lalali lalala</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam vel nihil molestiae inventore in fugiat at ullam suscipit numquam nesciunt? Quo reiciendis molestias quaerat repudiandae? Nam aspernatur consectetur laboriosam assumenda?</p>
+      <h2>Lalali lalala</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam vel nihil molestiae inventore in fugiat at ullam suscipit numquam nesciunt? Quo reiciendis molestias quaerat repudiandae? Nam aspernatur consectetur laboriosam assumenda?</p>
+      <h2>Lalali lalala</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam vel nihil molestiae inventore in fugiat at ullam suscipit numquam nesciunt? Quo reiciendis molestias quaerat repudiandae? Nam aspernatur consectetur laboriosam assumenda?</p>
+      <h2>Lalali lalala</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam vel nihil molestiae inventore in fugiat at ullam suscipit numquam nesciunt? Quo reiciendis molestias quaerat repudiandae? Nam aspernatur consectetur laboriosam assumenda?</p>
+      <h2>Lalali lalala</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam vel nihil molestiae inventore in fugiat at ullam suscipit numquam nesciunt? Quo reiciendis molestias quaerat repudiandae? Nam aspernatur consectetur laboriosam assumenda?</p>
+      <h3>Louloulou lilili</h3>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores tempore consequatur facere blanditiis similique omnis aliquid exercitationem vitae et, officia magni dolorem? Ipsam, soluta? Exercitationem porro possimus atque suscipit tempora.</p>
+      <ul>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia non nesciunt sint ut facere cupiditate itaque exercitationem ipsa libero error explicabo consectetur, hic praesentium laboriosam perspiciatis minima iusto architecto ipsum.</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia non nesciunt sint ut facere cupiditate itaque exercitationem ipsa libero error explicabo consectetur, hic praesentium laboriosam perspiciatis minima iusto architecto ipsum.</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia non nesciunt sint ut facere cupiditate itaque exercitationem ipsa libero error explicabo consectetur, hic praesentium laboriosam perspiciatis minima iusto architecto ipsum.</li>
+      </ul>
+      h3>Louloulou lilili</h3>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores tempore consequatur facere blanditiis similique omnis aliquid exercitationem vitae et, officia magni dolorem? Ipsam, soluta? Exercitationem porro possimus atque suscipit tempora.</p>
+      <ul>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia non nesciunt sint ut facere cupiditate itaque exercitationem ipsa libero error explicabo consectetur, hic praesentium laboriosam perspiciatis minima iusto architecto ipsum.</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia non nesciunt sint ut facere cupiditate itaque exercitationem ipsa libero error explicabo consectetur, hic praesentium laboriosam perspiciatis minima iusto architecto ipsum.</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia non nesciunt sint ut facere cupiditate itaque exercitationem ipsa libero error explicabo consectetur, hic praesentium laboriosam perspiciatis minima iusto architecto ipsum.</li>
+      </ul>
+      h3>Louloulou lilili</h3>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores tempore consequatur facere blanditiis similique omnis aliquid exercitationem vitae et, officia magni dolorem? Ipsam, soluta? Exercitationem porro possimus atque suscipit tempora.</p>
+      <ul>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia non nesciunt sint ut facere cupiditate itaque exercitationem ipsa libero error explicabo consectetur, hic praesentium laboriosam perspiciatis minima iusto architecto ipsum.</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia non nesciunt sint ut facere cupiditate itaque exercitationem ipsa libero error explicabo consectetur, hic praesentium laboriosam perspiciatis minima iusto architecto ipsum.</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia non nesciunt sint ut facere cupiditate itaque exercitationem ipsa libero error explicabo consectetur, hic praesentium laboriosam perspiciatis minima iusto architecto ipsum.</li>
+      </ul>
+      <h4>Et ca continue</h4>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ab nostrum quo magni adipisci impedit. Ratione eligendi, voluptatibus ipsam quo dicta eius sed cupiditate dolorum harum quisquam velit repellendus provident.
+      Quia quis natus fugit necessitatibus, ullam ratione facere velit eius aperiam sunt tempore itaque qui debitis ex quae earum distinctio voluptate molestiae corporis magnam perspiciatis fugiat? Molestias nulla voluptate atque.
+      Molestiae molestias, maxime expedita reprehenderit nobis, cupiditate error vero consectetur fuga quaerat voluptatibus, labore neque possimus. Incidunt quos, a, aspernatur fugit deleniti corporis accusantium neque voluptates assumenda ipsum, minus rem.
+      Quam, perferendis deleniti. Aut error recusandae assumenda officia sit suscipit, facere molestiae et aliquid itaque veritatis harum enim ratione natus vitae reiciendis in. Recusandae delectus, optio omnis maiores aspernatur ullam.
+      Perspiciatis reprehenderit et consectetur sequi incidunt exercitationem recusandae explicabo pariatur distinctio eius hic, sapiente ad, aspernatur fugiat veniam magnam itaque fugit natus tempora reiciendis molestias. Nihil ullam pariatur illum recusandae!
+      Iusto ad, veniam aliquid cumque natus quasi ex sapiente officiis esse voluptas. Vitae aliquid obcaecati explicabo, culpa similique maiores enim et at qui aut doloribus nemo debitis aperiam cupiditate corporis?
+      Consequuntur reiciendis ipsa nam veritatis illum, iste perspiciatis! Impedit ullam consectetur, hic laboriosam, atque temporibus deserunt commodi incidunt eum perspiciatis autem optio ratione facere tempore eveniet magni saepe laborum maiores?
+      Recusandae tempore tenetur at, maiores repellendus distinctio nobis sit corporis! Quae magnam aperiam fugit architecto laboriosam, culpa ipsa illo a officia autem, molestiae, earum quo veritatis vel omnis. Possimus, ratione?
+      Velit assumenda, inventore odio officia architecto perferendis dolores, culpa magnam ipsum, incidunt voluptate doloremque nobis necessitatibus. Debitis nobis itaque cumque odio hic ullam ipsam, esse atque minima dolores, explicabo pariatur.
+      Beatae sint iusto reprehenderit! Obcaecati blanditiis distinctio tenetur culpa, in dolores nesciunt quam odit facere laborum ipsum. Nesciunt non quibusdam optio quo natus earum sapiente repellendus, eum alias quas nihil!</p>
+    </div>
+  </div>
 
   <script src="./index.js"></script>
 </body>
